<package>
  <name>simulink_monitor</name>
  <version>1.0.2</version>
  <description>
    simulink_monitor
  </description>
  <maintainer email="rosuser@test.com">ROS User</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <run_depend>rospy</run_depend>
</package>
